# gangrennes

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  api.openapi.yaml  docker-compose.dev.yml  docker-compose.yml  rust-toolchain.toml
data/: app.db  gangrennes.sqlite3-shm  gangrennes.sqlite3-wal
migrations/: 0001_init.sql  202606180001_create_items.sql  202606180002_create_users.sql
src/: config.rs  error.rs  lib.rs  main.rs  startup.rs  state.rs
src/api/: mod.rs  views.rs
src/api/auth/: dto.rs  handlers.rs  mod.rs  routes.rs  services.rs
src/api/pages/: dto.rs  handlers.rs  routes.rs  services.rs
src/api/posts/: dto.rs  handlers.rs  routes.rs  services.rs
src/config/: app_config.rs  db_config.rs  mod.rs
src/controllers/: auth_controller.rs  health_controller.rs  item_controller.rs  mod.rs
src/db/: item_repository.rs  migration.rs  mod.rs  pool.rs  sqlite.rs  user_repository.rs
src/models/: auth.rs  health.rs  item.rs  mod.rs  user.rs
src/routes/: auth.rs  docs.rs  health.rs  items.rs  mod.rs
src/utils/: auth.rs  error.rs  mod.rs  shutdown.rs
static/: app.js  index.html  styles.css
templates/: calendar.html  index.html  login.html  new.html  post_detail.html  profile.html  protected.html  style.html
